2016-07-11 Albert Chu <chu11@llnl.gov>

	* Untabify all .c, .h, and .pl files for consistency across
	FreeIPMI.

2016-07-05 Holger Liebig <holger.liebig@ts.fujitsu.com>

	* libfreeipmi/include/freeipmi/spec/ipmi-product-id-spec.h: Update
	Fujitsu Product ID range.

2016-06-21 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/oem/ipmi-oem-intel-spec.h: Add
	forgotten OEM macro.

2016-06-08 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-comp-code-spec.h: Fix
	invalid completion code values for set session privilege macros.

2016-06-06 Albert Chu <chu11@llnl.gov>

	* ipmiconsole/ipmiconsole-argp.c, man/ipmiconsole.8.pre.in:
	Clarify use of --debugfile option.

	* ipmiconsole/: Make --debugfile option available in production
	builds.

2016-06-06 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/util/ipmi-error-util.c (ipmi_completion_code_strerror_r):
	Remove buggy code which explains Master/Read write error from
	ChangeLog on 2015-09-09.

2016-05-21 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-iana-enterprise-numbers-spec.h:
	Add macro for maximum IANA numbers.
	
	* libfreeipmi/spec/generate-enterprise-numbers-file.sh:
	Automatically update iana .h file with max index.

2016-05-10 Albert Chu <chu11@llnl.gov>

	* bmc-device/: Support --read-fru and --device-id option.

	* libfreeipmi/: Add ipmi_fru_open_device_id_with_buffer function.

	* ipmi-fru/: Add --fru-file option.

	* libfreeipmi/: Add ipmi_cmd_write_fru_data function.

	* bmc-device/: Support --write-fru option.

2016-05-20 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/spec/enterprise-numbers.pl: Handle header and all
	corner cases in enterprise-numbers records list to avoid having to
	hand modify.

	* libfreeipmi/spec/generate-enterprise-numbers-file.sh: New file
	to automatically download and generate C file.

	* libfreeipmi/spec/enterprise-numbers.pl: Remove extraneous text
	from manufacturer names (e.g. "formerly known as" and similar
	text).
