@@ -1,5 +1,9 @@
 2016-07-11 Albert Chu <chu11@llnl.gov>
 
+	* Document support of Intel S2600KPR.
+
+2016-07-11 Albert Chu <chu11@llnl.gov>
+
 	* Untabify all .c, .h, and .pl files for consistency across
 	FreeIPMI.
 
